force-app/main/default/objects/Account/fields/Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Notes__c</fullName>
    <description>PGP-0022 - Stores account notes details.</description>
    <label>Account Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>