force-app/main/default/objects/Account/fields/Certification_Count__c.field-meta.xml
<CustomField>
    <fullName>Certification_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PGP-0025 - Stores certification count for selected contact Id.</description>
    <label>Certification Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>