force-app/main/default/objects/Account/fields/Latest_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Certification_Date__c</fullName>
    <description>PGP-0025 - Stores latest certification obtained date</description>
    <label>Latest Certification Date</label>
    <type>Date</type>
</CustomField>