force-app/main/default/objects/Account/fields/Total_Certification_Renewal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Certification_Renewal_Cost__c</fullName>
    <description>PGP-0025 - It stores total active certification renewal proce.</description>
    <label>Total Certification Renewal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>